--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -4,23 +4,23 @@
     <string name="about_version">Wersja:</string>
     <string name="about_sunny">Słonecznie</string>
     <string name="about_cloudy">Pochmurnie</string>
-    <string name="about_overcast">Overcast</string>
+    <string name="about_overcast">Zachmurzenie</string>
     <string name="about_fog">Mgła</string>
-    <string name="about_rainstorm">Rainstorm</string>
-    <string name="about_t_storms">T-storms</string>
-    <string name="about_rain_drizzle">Drizzle</string>
-    <string name="about_heavy_rain">Heavy Rain</string>
-    <string name="about_moderate_rain">Moderate Rain</string>
-    <string name="about_light_rain">Light Rain</string>
-    <string name="about_sleet">Sleet</string>
-    <string name="about_blizzard">Blizzard</string>
-    <string name="about_snow_showers">Snow Showers</string>
-    <string name="about_heavy_snow">Heavy Snow</string>
-    <string name="about_moderate_snow">Moderate Snow</string>
-    <string name="about_light_snow">Light Snow</string>
-    <string name="about_dust">Dust</string>
-    <string name="about_hailstone">Hailstone</string>
-    <string name="about_haze">Haze</string>
+    <string name="about_rainstorm">Ulewy</string>
+    <string name="about_t_storms">Burze</string>
+    <string name="about_rain_drizzle">Mżawka</string>
+    <string name="about_heavy_rain">Duże opady</string>
+    <string name="about_moderate_rain">Opady deszczu</string>
+    <string name="about_light_rain">Lekki deszcz</string>
+    <string name="about_sleet">Deszcz ze śniegiem</string>
+    <string name="about_blizzard">Burze śnieżne</string>
+    <string name="about_snow_showers">Deszcz ze śniegiem</string>
+    <string name="about_heavy_snow">Duży śnieg</string>
+    <string name="about_moderate_snow">Opady śniegu</string>
+    <string name="about_light_snow">Lekki śnieg</string>
+    <string name="about_dust">Pylisto</string>
+    <string name="about_hailstone">Grad</string>
+    <string name="about_haze">Zmętnienie</string>
     <string name="about_for_translators">For Translators:</string>
     <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
     <string name="about_social">Linki społecznościowe:</string>
@@ -71,13 +71,13 @@ Naprawdę to doceniam!"</string>
     <string name="forecast_cloudy">Pochmurno</string>
     <string name="forecast_cold">Mróz</string>
     <string name="forecast_drizzle">Mżawka</string>
-    <string name="forecast_dust">Pył</string>
+    <string name="forecast_dust">Pylisto</string>
     <string name="forecast_fair">Przejrzyście</string>
     <string name="forecast_flurries">Ulewy</string>
     <string name="forecast_fog">Mgła</string>
     <string name="forecast_freezing_drizzle">Marznąca mżawka</string>
     <string name="forecast_freezing_rain">Marznący deszcz</string>
-    <string name="forecast_haze">Haze</string>
+    <string name="forecast_haze">Zmętnienie</string>
     <string name="forecast_hail">Grad</string>
     <string name="forecast_hot">Upał</string>
     <string name="forecast_heavy_rain">Silny deszcz</string>
@@ -101,7 +101,7 @@ Naprawdę to doceniam!"</string>
     <string name="forecast_smoke">Zadymienie</string>
     <string name="forecast_snow">Śnieg</string>
     <string name="forecast_snow_showers">Opady śniegu</string>
-    <string name="forecast_snow_storm">Burza śniegu</string>
+    <string name="forecast_snow_storm">Burza śnieżna</string>
     <string name="forecast_sunny">Słonecznie</string>
     <string name="forecast_thunderstorm">Burza</string>
     <string name="forecast_thunderstorms">Burze z piorunami</string>
