--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -43,21 +43,21 @@
     <string name="dialog_color_picker">Renk seçici</string>
     <string name="donate">Bağış yap</string>
     <string name="donations_button_close">Kapat</string>
-    <string name="donations_description">Do you find this application useful?\nSupport it\'s development by flattring it or sending donations to the developer!</string>
+    <string name="donations_description">Bu uygulamayı kullanızlı buldunuz mu?\nGeliştirici\'ye yapacağınız bağış ve beğeninizle uygulamanın geliştirilmesine destek olabilirsiniz!</string>
     <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">Flattr takes 10 % as a monthly fee!</string>
+    <string name="donations_flattr_description">Flattr aylık ücrete istinaden % 10 kesinti yapıyor!</string>
     <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">Google takes 30 % off every donation!</string>
-    <string name="donations_google_android_market_donate_button">Donate!</string>
-    <string name="donations_google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string>
-    <string name="donations_google_android_market_not_supported_title">In-App Donations are not supported</string>
-    <string name="donations_google_android_market_text">How much?</string>
+    <string name="donations_google_android_market_description">Google her bağıştan % 30 kesinti yapıyor!</string>
+    <string name="donations_google_android_market_donate_button">Bağış Yap!</string>
+    <string name="donations_google_android_market_not_supported">Uygulama içi bağış desteklenmiyor. Google Play Mağazası düzgün yüklendi mi?</string>
+    <string name="donations_google_android_market_not_supported_title">Uygulama içi bağış desteklenmiyor</string>
+    <string name="donations_google_android_market_text">Ne kadar?</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_yandex">Yandex.Money</string>
-    <string name="donations_paypal_description">You can choose how much you want to donate after clicking the button!</string>
-    <string name="donations_paypal_item_name">InApp Donation</string>
-    <string name="donations_thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
-    <string name="donations_thanks_dialog_title">Thanks!</string>
+    <string name="donations_paypal_description">Ne kadar bağış yapacağınızı düğmeye tıkladıktan sonra seçebilirsiniz!</string>
+    <string name="donations_paypal_item_name">Uygulama içi Bağış</string>
+    <string name="donations_thanks_dialog">Bağış için Teşekkürler!\n Sizi gerçekten takdir ediyorum!</string>
+    <string name="donations_thanks_dialog_title">Teşekkürler!</string>
     <string name="end_time_title">Bitti</string>
     <string name="fetching_location">Konumunuz alınıyor\u2026</string>
     <string name="forecast_chance_of_rain">Yağmur Olasılığı</string>
@@ -75,7 +75,7 @@
     <string name="forecast_flurries">Kısa ve şiddetli yağış</string>
     <string name="forecast_fog">Sis</string>
     <string name="forecast_freezing_drizzle">Soğuk ve çiseleme</string>
-    <string name="forecast_freezing_rain">Suğuk ve yağmur</string>
+    <string name="forecast_freezing_rain">Soğuk ve yağmur</string>
     <string name="forecast_haze">Pus</string>
     <string name="forecast_hail">Dolu</string>
     <string name="forecast_hot">Sıcak</string>
@@ -100,7 +100,7 @@
     <string name="forecast_smoke">Dumanlı</string>
     <string name="forecast_snow">Kar</string>
     <string name="forecast_snow_showers">Sağanak kar</string>
-    <string name="forecast_snow_storm">KAr fırtınası</string>
+    <string name="forecast_snow_storm">Kar fırtınası</string>
     <string name="forecast_sunny">Açık</string>
     <string name="forecast_thunderstorm">Fırtına</string>
     <string name="forecast_thunderstorms">Gök gürültülü fırtına</string>
