--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -43,7 +43,7 @@
     <string name="dialog_color_picker">Renk seçici</string>
     <string name="donate">Bağış yap</string>
     <string name="donations_button_close">Kapat</string>
-    <string name="donations_description">Bu uygulamayı kullanızlı buldunuz mu?\nGeliştirici\'ye yapacağınız bağış ve beğeninizle uygulamanın geliştirilmesine destek olabilirsiniz!</string>
+    <string name="donations_description">Bu uygulamayı kullanışlı buldunuz mu?\nGeliştirici\'ye yapacağınız bağış ve beğeninizle uygulamanın geliştirilmesine destek olabilirsiniz!</string>
     <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">Flattr aylık ücrete istinaden % 10 kesinti yapıyor!</string>
     <string name="donations_google_android_market">Google Play Store</string>
