translate strings.xml
Not fully, I translating...

--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -109,111 +109,109 @@ Sizi gerçekten takdir ediyorum!"</string>
     <string name="foreca_partly_cloudy">Parçalı Bulutlu</string>
     <string name="foreca_partly_cloudy_l_rain">Hafif Yağmur</string>
     <string name="foreca_partly_cloudy_l_snow">Hafif Kar Yağışı</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_partly_cloudy_rain">Rain</string>
-    <string name="foreca_partly_cloudy_showers">Showers</string>
-    <string name="foreca_partly_cloudy_snow">Snow</string>
-    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
-    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
-    <string name="changelog">Changelog</string>
-    <string name="just_now">Just now</string>
-    <string name="loading">Loading…</string>
-    <string name="location_edit">Enter city name</string>
-    <string name="location_gps">Current location</string>
-    <string name="location_list">Locations</string>
-    <string name="location_search">Location search</string>
-    <string name="main_screen_text_color_summary">The text color of main screen data</string>
-    <string name="menu">Menu</string>
-    <string name="menu_hourly">Hourly</string>
-    <string name="menu_indices">Life Style</string>
-    <string name="menu_locations">Locations</string>
-    <string name="menu_moon_phases">Moon Phases</string>
-    <string name="menu_settings">Settings</string>
-    <string name="menu_trend">Trend</string>
-    <string name="menu_update">Update</string>
-    <string name="moon_age">Age %s days</string>
-    <string name="moon_newmoon">New Moon</string>
-    <string name="moon_waxingcrescent">Waxing crescent</string>
-    <string name="moon_firstquarter">First quarter</string>
-    <string name="moon_waxinggibbous">Waxing gibbous</string>
-    <string name="moon_full">Full Moon</string>
-    <string name="moon_waninggibbous">Waning gibbous</string>
-    <string name="moon_lastquarter">Last quarter</string>
-    <string name="moon_waningcrescent">Waning crescent</string>
-    <string name="moon_current_view">View mode: %s</string>
-    <string name="moon_illuminated">Illuminated</string>
-    <string name="moon_since">Начиная с</string>
-    <string name="network_error">"Could not connect the server.
-Check your network settings."</string>
-    <string name="new_version">New version</string>
-    <string name="no_provider">"Location is not available
-Select location manually"</string>
-    <string name="no_weather_provider">No MIUI weather provider found</string>
-    <string name="not_now">Not now</string>
-    <string name="ok">OK</string>
-    <string name="press_color_to_apply">Press on Color to apply</string>
-    <string name="pressure_units">Pressure units</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Hafif Sulu Kar</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Şiddetli Fırtına Olasılığı</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Şiddetli Fırtına Olasılığı</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Şiddetli Fırtına Olasılığı</string>
+    <string name="foreca_partly_cloudy_rain">Yağmurlu</string>
+    <string name="foreca_partly_cloudy_showers">Sağanak Yağış</string>
+    <string name="foreca_partly_cloudy_snow">Kar Yağışı</string>
+    <string name="foreca_partly_cloudy_snow_showers">Sağanak Kar Yağışı</string>
+    <string name="foreca_partly_cloudy_wet_snow">Sulu Kar Yağışı</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Sağanak Kar Yağışı/string>
+    <string name="changelog">Sürüm Notları</string>
+    <string name="just_now">Az önce</string>
+    <string name="loading">Yükleniyor…</string>
+    <string name="location_edit">Şehir ismi girin</string>
+    <string name="location_gps">Mevcut konum</string>
+    <string name="location_list">Konumlar</string>
+    <string name="location_search">Konum ara</string>
+    <string name="main_screen_text_color_summary">Ana ekran verilerinin rengi</string>
+    <string name="menu">Menü</string>
+    <string name="menu_hourly">Saatlik</string>
+    <string name="menu_indices">Yaşam Stili</string>
+    <string name="menu_locations">Konumlar</string>
+    <string name="menu_moon_phases">Ay'ın Evreleri</string>
+    <string name="menu_settings">Ayarlar</string>
+    <string name="menu_trend">Grafik</string>
+    <string name="menu_update">Güncelle</string>
+    <string name="moon_age">%s gün boyunca</string>
+    <string name="moon_newmoon">Yeni Ay</string>
+    <string name="moon_waxingcrescent">Hilal</string>
+    <string name="moon_firstquarter">İlk Dördün</string>
+    <string name="moon_waxinggibbous">Şişkin Ay</string>
+    <string name="moon_full">Dolunay</string>
+    <string name="moon_waninggibbous">Son Dördün</string>
+    <string name="moon_lastquarter">Son Dördün</string>
+    <string name="moon_waningcrescent">Hilal</string>
+    <string name="moon_current_view">Görüntüleme Şekli: %s</string>
+    <string name="moon_illuminated">Aydınlık</string>
+    <string name="moon_since">Başlangıç</string>
+    <string name="network_error">"İnternete bağlanılamıyor, lütfen mevcut bir internet bağlantınız olduğunu kontrol edin."</string>
+    <string name="new_version">Yeni Sürüm</string>
+    <string name="no_provider">"Konum bulunamıyor, lütfen manüel olarak konum ekleyin."</string>
+    <string name="no_weather_provider">MIUI havadurumu sağlayıcısı yok.</string>
+    <string name="not_now">Şuan değil</string>
+    <string name="ok">Tamam</string>
+    <string name="press_color_to_apply">Rengi seçin ve uygulayın</string>
+    <string name="pressure_units">Basınç birimleri</string>
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mmHg"</string>
-    <string name="quiet_hours_enabled">Enable Quiet hours</string>
-    <string name="quiet_hours_enabled_off">Updates will function as normal</string>
-    <string name="quiet_hours_enabled_on">Quiet hours enabled</string>
-    <string name="quiet_hours_title">Quiet hours</string>
-    <string name="settings_about_summary">Information about application</string>
-    <string name="settings_about_title">About</string>
-    <string name="settings_animation_download_summary">Download video files of animations for current weather condition (if video file not found in local storage)</string>
-    <string name="settings_animation_download_title">Download animations</string>
-    <string name="settings_animation_show_summary">Show weather animation for current conditions</string>
-    <string name="settings_animation_show_title">Show animation</string>
-    <string name="settings_animation_type">Animation type</string>
-    <string name="settings_category_animation">Animation</string>
-    <string name="settings_category_animation_sum">Animation type, download policy</string>
-    <string name="settings_category_app_update">Application update</string>
-    <string name="settings_category_appearance">Common</string>
-    <string name="settings_category_appearance_sum">Measure units, text color etc.</string>
-    <string name="settings_category_forecast_update">Forecast update</string>
-    <string name="settings_category_miui">MIUI ROMs</string>
-    <string name="settings_category_miui_sum">MIUI support settings (turn on/off, clear data etc.)</string>
-    <string name="settings_category_network">Network settings</string>
-    <string name="settings_category_notification">Notifications</string>
-    <string name="settings_category_notification_sum">Weather notifications settings</string>
-    <string name="settings_category_update">Update</string>
-    <string name="settings_category_update_sum">Settings for autoupdate and autoupdate time</string>
-    <string name="settings_category_widgets">Widgets</string>
-    <string name="settings_category_widgets_sum">Widgets appearance and click actions</string>
-    <string name="settings_click_actions">Click actions</string>
-    <string name="settings_check_updates_summary">Check for updates on application start</string>
-    <string name="settings_check_updates_title">Check for updates</string>
-    <string name="settings_hide_bottom_bar_title">Hide bottom bar</string>
-    <string name="settings_hide_bottom_bar_summary">Touch screen to hide bottom bar with buttons</string>
-    <string name="settings_miui_support_summary">Turn on to support MIUI native widgets</string>
-    <string name="settings_miui_support_title">MIUI widgets support</string>
-    <string name="settings_miui_v5_summary">Turn on if you have MIUI v5 ROM</string>
+    <string name="quiet_hours_enabled">Bildirim seslerini kapat</string>
+    <string name="quiet_hours_enabled_off">Güncellemeler normal biçimde yapılacak</string>
+    <string name="quiet_hours_enabled_on">Bildirim sesleri devredışı</string>
+    <string name="quiet_hours_title">Sessiz Saatler</string>
+    <string name="settings_about_summary">Uygulama hakkında bilgilendirme</string>
+    <string name="settings_about_title">Hakkında</string>
+    <string name="settings_animation_download_summary">Mevcut havadurumunun görüntüleme animasyonlarını indir (Hafızada bulunamazsa indirme yapılacaktır.)</string>
+    <string name="settings_animation_download_title">Animasyonları indir</string>
+    <string name="settings_animation_show_summary">Şuanki havadurumunun animasyonunu göster</string>
+    <string name="settings_animation_show_title">Anismayonu göster</string>
+    <string name="settings_animation_type">Animasyon Tipi</string>
+    <string name="settings_category_animation">Animasyon</string>
+    <string name="settings_category_animation_sum">Animasyon tipi, indirme politikası</string>
+    <string name="settings_category_app_update">Uygulama güncellemesi</string>
+    <string name="settings_category_appearance">Genel</string>
+    <string name="settings_category_appearance_sum">Birimler, yazı rengi vs.</string>
+    <string name="settings_category_forecast_update">Tahminleri güncelle</string>
+    <string name="settings_category_miui">MIUI ROM'lar</string>
+    <string name="settings_category_miui_sum">MIUI Havadurumu ayarları için destek (açma/kapama, verileri temizleme vs.)</string>
+    <string name="settings_category_network">Bağlantı ayarları</string>
+    <string name="settings_category_notification">Bildirimler</string>
+    <string name="settings_category_notification_sum">Havadurumu bildirim ayarları</string>
+    <string name="settings_category_update">Güncelle</string>
+    <string name="settings_category_update_sum">Otomatik güncelleme ayarları</string>
+    <string name="settings_category_widgets">Widgetlar</string>
+    <string name="settings_category_widgets_sum">Widget görünüm ve kısayolları</string>
+    <string name="settings_click_actions">Tıklama eylemi</string>
+    <string name="settings_check_updates_summary">Uygulama açılınca güncellemeleri denetle</string>
+    <string name="settings_check_updates_title">Güncellemeleri denetle</string>
+    <string name="settings_hide_bottom_bar_title">Butonları çubuğunu gizle</string>
+    <string name="settings_hide_bottom_bar_summary">Ekrana dokununca alttaki butonları gizle</string>
+    <string name="settings_miui_support_summary">MIUI Widgetlarını desteklemek için açın.</string>
+    <string name="settings_miui_support_title">MIUI widget desteği</string>
+    <string name="settings_miui_v5_summary">Eğer MIUI ROM kuruluysa açın</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
-    <string name="settings_moon_phases_title">Moon Phases</string>
-    <string name="settings_notification_color_title">Statusbar symbol color</string>
-    <string name="settings_notification_summary">Show current weather conditions in the notification area</string>
-    <string name="settings_notification_text_color_summary">Notification text and icons color</string>
-    <string name="settings_notification_title">Show Notification</string>
-    <string name="settings_notification_type">Notification type</string>
-    <string name="settings_show_info_summary">Show or hide interface elements</string>
-    <string name="settings_show_info_title">Show info</string>
-    <string name="settings_show_weather_icons_summary">Show weather icons (instead of textual weather description) in 3-day forecast</string>
-    <string name="settings_show_weather_icons_title">Show weather icons</string>
-    <string name="settings_time_format_12h">12h time format</string>
-    <string name="settings_update_autoupdate_summary">Auto update weather forecast</string>
-    <string name="settings_update_autoupdate_title">Auto update</string>
-    <string name="settings_update_interval_title">Update Interval</string>
-    <string name="settings_update_roaming_summary">Automatically update weather forecast even when roaming. Note that you can have an extra charges to your phone bill</string>
-    <string name="settings_update_roaming_title">Update in roaming</string>
-    <string name="settings_update_wake_title">Wake device</string>
-    <string name="settings_update_wifi_only_summary">Automatically update weather forecast only when Wi-Fi connection established</string>
-    <string name="settings_update_wifi_only_title">Update only on Wi-Fi</string>
-    <string name="settings_weather_provider">Weather Provider</string>
+    <string name="settings_moon_phases_title">Ay'ın Evreleri</string>
+    <string name="settings_notification_color_title">Durum çubuğu simge rengi</string>
+    <string name="settings_notification_summary">Mevcut havadurumunu bildirim panelinde görüntüle</string>
+    <string name="settings_notification_text_color_summary">Bildirimlerin yazı ve simge rengi</string>
+    <string name="settings_notification_title">Bildirimleri göster</string>
+    <string name="settings_notification_type">Bildirim şekli</string>
+    <string name="settings_show_info_summary">Arayüz verilerini göster yada gizle</string>
+    <string name="settings_show_info_title">Bilgileri göster</string>
+    <string name="settings_show_weather_icons_summary"Metin açıklamasının yerine havadurumu simgelerini göster (3 günlük tahmin)</string>
+    <string name="settings_show_weather_icons_title">Havadurumu simgelerini göster</string>
+    <string name="settings_time_format_12h">12 Saatlik zaman dilimi</string>
+    <string name="settings_update_autoupdate_summary">Havadurumu tahminlerini otomatik güncelle</string>
+    <string name="settings_update_autoupdate_title">Otomatik güncelleme</string>
+    <string name="settings_update_interval_title">Zamanlı güncelleme</string>
+    <string name="settings_update_roaming_summary">Dolaşımda dahi otomatik güncelleme yapar, internet paketiniz yoksa açmayın ekstra fatura ücreti ödemek zorunda kalabilirsiniz.</string>
+    <string name="settings_update_roaming_title">Dolaşımdayken güncelle</string>
+    <string name="settings_update_wake_title">Aygıtı uyandır</string>
+    <string name="settings_update_wifi_only_summary">Yalnızca aktif Wifi bağlantısı varken güncelleme yapar.</string>
+    <string name="settings_update_wifi_only_title">Yalnızca Wifi</string>
+    <string name="settings_weather_provider">Havadurumu Veri Sağlayıcı</string>
     <string name="settings_widgets_click_clock_summary">The app to start by clicking on widgets clock</string>
     <string name="settings_widgets_click_clock_title">Click on Clock</string>
     <string name="settings_widgets_click_date_summary">The app to start by clicking on widgets date</string>
