--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -212,71 +212,71 @@ Sizi gerçekten takdir ediyorum!"</string>
     <string name="settings_update_wifi_only_summary">Yalnızca aktif Wifi bağlantısı varken güncelleme yapar.</string>
     <string name="settings_update_wifi_only_title">Yalnızca Wifi</string>
     <string name="settings_weather_provider">Havadurumu Veri Sağlayıcı</string>
-    <string name="settings_widgets_click_clock_summary">The app to start by clicking on widgets clock</string>
-    <string name="settings_widgets_click_clock_title">Click on Clock</string>
-    <string name="settings_widgets_click_date_summary">The app to start by clicking on widgets date</string>
-    <string name="settings_widgets_click_date_title">Click on Date</string>
-    <string name="settings_widgets_click_weather_summary">The app to start by clicking on widgets forecast area (temperature)</string>
-    <string name="settings_widgets_click_weather_title">Click on Forecast</string>
+    <string name="settings_widgets_click_clock_summary">Saate tıklayınca hangi uygulamanın başlatılacağını seç</string>
+    <string name="settings_widgets_click_clock_title">Saat</string>
+    <string name="settings_widgets_click_date_summary">Tarih bilgisine tıklayınca hangi uygulamanın başlatılacağını seç</string>
+    <string name="settings_widgets_click_date_title">Tarih</string>
+    <string name="settings_widgets_click_weather_summary">Havadurumu tahiminine tıklayınca hangi uygulamanın başlatılacağını seç (sıcaklık)</string>
+    <string name="settings_widgets_click_weather_title">Havadurumu</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
-    <string name="settings_widgets_widget4x1_data_title">Extended data</string>
-    <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background</string>
-    <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string>
+    <string name="settings_widgets_widget4x1_data_title">Ayrıntılı Veri</string>
+    <string name="settings_widgets_widget4x1_transparent_sum">Varsayılan arkaplan işaretlenmemiş</string>
+    <string name="settings_widgets_widget4x1_transparent_title">Saydam arkaplan</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
-    <string name="settings_widgets_widget4x2_city_font_summary">Default value 22sp</string>
-    <string name="settings_widgets_widget4x2_city_font_title">City</string>
-    <string name="settings_widgets_widget4x2_clock_font_summary">Default value 50sp</string>
-    <string name="settings_widgets_widget4x2_clock_font_title">Clock</string>
-    <string name="settings_widgets_widget4x2_custom_font_summary">Customize font size for widget</string>
-    <string name="settings_widgets_widget4x2_custom_font_title">Custom font size</string>
-    <string name="settings_widgets_widget4x2_date_font_summary">Default value 14sp</string>
-    <string name="settings_widgets_widget4x2_date_font_title">Date</string>
-    <string name="settings_widgets_widget4x2_desc_font_summary">Default value 22sp</string>
-    <string name="settings_widgets_widget4x2_desc_font_title">Weather description</string>
-    <string name="settings_widgets_widget4x2_feel_font_summary">Default value 14sp</string>
-    <string name="settings_widgets_widget4x2_feel_font_title">Feelings</string>
-    <string name="settings_widgets_widget4x2_temp_font_summary">Default value 40sp</string>
-    <string name="settings_widgets_widget4x2_temp_font_title">Temperature</string>
+    <string name="settings_widgets_widget4x2_city_font_summary">Varsayılan Değer 22sp</string>
+    <string name="settings_widgets_widget4x2_city_font_title">Şehir</string>
+    <string name="settings_widgets_widget4x2_clock_font_summary">Varsayılan değer 50sp</string>
+    <string name="settings_widgets_widget4x2_clock_font_title">Saat</string>
+    <string name="settings_widgets_widget4x2_custom_font_summary">Widget için yazıtipi boyutunu değiştir</string>
+    <string name="settings_widgets_widget4x2_custom_font_title">Yazı Tipi Boyutu</string>
+    <string name="settings_widgets_widget4x2_date_font_summary">Varsayılan değer 14sp</string>
+    <string name="settings_widgets_widget4x2_date_font_title">Tarih</string>
+    <string name="settings_widgets_widget4x2_desc_font_summary">Varsayılan değer 22sp</string>
+    <string name="settings_widgets_widget4x2_desc_font_title">Havadurumu açıklaması</string>
+    <string name="settings_widgets_widget4x2_feel_font_summary">Varsayılan değer 14sp</string>
+    <string name="settings_widgets_widget4x2_feel_font_title">Hissedilen</string>
+    <string name="settings_widgets_widget4x2_temp_font_summary">Varsayılan değer 40sp</string>
+    <string name="settings_widgets_widget4x2_temp_font_title">Sıcaklık</string>
     <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
-    <string name="settings_widgets_widget4x2_wind_font_summary">Default value 14sp</string>
-    <string name="settings_widgets_widget4x2_wind_font_title">Wind</string>
-    <string name="share">Share</string>
+    <string name="settings_widgets_widget4x2_wind_font_summary">Varsayılan değer 14sp</string>
+    <string name="settings_widgets_widget4x2_wind_font_title">Rüzgar</string>
+    <string name="share">Paylaş</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# Today %1$s's weather is %2$s, %3$s, %4$s. Updated %5$s."</string>
-    <string name="share_weather_title">Share weather data</string>
-    <string name="save_screen_shot_failed">Failed to save screenshot</string>
-    <string name="start_time_title">Start</string>
-    <string name="temperature_units">Temperature units</string>
-    <string name="temperature_units_c">Celsius</string>
-    <string name="temperature_units_f">Fahrenheit</string>
-    <string name="text_color_title">Text Color</string>
-    <string name="updating">Updating…</string>
-    <string name="upgrade">Upgrade</string>
-    <string name="visibility_units">Visibility units</string>
+    <string name="share_weather_content">"\#WeatherBZ# Bugün %1$s's havadurumu %2$s, %3$s, %4$s. Güncelleme %5$s."</string>
+    <string name="share_weather_title">Havadurumu verisini paylaş</string>
+    <string name="save_screen_shot_failed">Ekran görüntüsü alınamadı</string>
+    <string name="start_time_title">Başlat</string>
+    <string name="temperature_units">Sıcaklık Birimleri</string>
+    <string name="temperature_units_c">Santigrat</string>
+    <string name="temperature_units_f">Fahrenhayt</string>
+    <string name="text_color_title">Yazı Rengi</string>
+    <string name="updating">Güncelleniyor…</string>
+    <string name="upgrade">Yükselt</string>
+    <string name="visibility_units">Görüş mesafesi birimi</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
-    <string name="visibility_units_mi">" miles"</string>
-    <string name="weather_cond_cloudy">Cloudy</string>
-    <string name="weather_cond_fog">Fog</string>
-    <string name="weather_cond_chancerain">Chance of rain</string>
-    <string name="weather_cond_lightsnow">Light snow</string>
-    <string name="weather_cond_overcast">Overcast</string>
-    <string name="weather_cond_rain">Rain</string>
-    <string name="weather_cond_rainstorm">Rainstorm</string>
-    <string name="weather_cond_sleet">Sleet</string>
-    <string name="weather_cond_snow">Snow</string>
-    <string name="weather_cond_sunny">Sunny</string>
-    <string name="weather_cond_t_storms">Thunderstorms</string>
-    <string name="weather_feel">"RealFeel: "</string>
+    <string name="visibility_units_mi">" mil"</string>
+    <string name="weather_cond_cloudy">Bulutlu</string>
+    <string name="weather_cond_fog">Sisli</string>
+    <string name="weather_cond_chancerain">Yağmur olasalığı</string>
+    <string name="weather_cond_lightsnow">Hafif Kar Yağışı</string>
+    <string name="weather_cond_overcast">Bulutlu</string>
+    <string name="weather_cond_rain">Yağmurlu</string>
+    <string name="weather_cond_rainstorm">Yağmur Fırtınası</string>
+    <string name="weather_cond_sleet">Karla Karışık Yağmur</string>
+    <string name="weather_cond_snow">Kar Yağışlı</string>
+    <string name="weather_cond_sunny">Güneşli</string>
+    <string name="weather_cond_t_storms">Gök gürültülü fırtına</string>
+    <string name="weather_feel">"Hissedilen: "</string>
     <string name="weather_forecast_empty">--</string>
-    <string name="weather_humidity">"Humidity: "</string>
-    <string name="weather_no_city">No city</string>
-    <string name="weather_no_conditions_data">No weather data</string>
+    <string name="weather_humidity">"Nem: "</string>
+    <string name="weather_no_city">Şehir yok</string>
+    <string name="weather_no_conditions_data">Havadurumu verisi yok</string>
     <string name="weather_no_temp_data">-°</string>
-    <string name="weather_pressure">"Pressure: "</string>
-    <string name="weather_sunrize">"Sunrise: "</string>
-    <string name="weather_sunset">"Sunset: "</string>
+    <string name="weather_pressure">"Basınç: "</string>
+    <string name="weather_sunrize">"Gündoğumu: "</string>
+    <string name="weather_sunset">"Günbatımı: "</string>
     <string name="weather_visibility">"Visibility: "</string>
     <string name="weather_wind">"Wind: "</string>
     <string name="widget_name_large">(4x2)Weather BZ</string>
@@ -284,7 +284,7 @@ Sizi gerçekten takdir ediyorum!"</string>
     <string name="widget_name_medium">(4x1)Weather BZ</string>
     <string name="widget_name_medium_ext">(4x1 ext)Weather BZ</string>
     <string name="widget_name_medium_v5">(4x1 v5)Weather BZ</string>
-    <string name="widget_text_color_summary">"The widget's text color"</string>
+    <string name="widget_text_color_summary">"Widget'in yazı rengi"</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">E-NE</string>
     <string name="wind_ese">E-SE</string>
@@ -295,27 +295,27 @@ Sizi gerçekten takdir ediyorum!"</string>
     <string name="wind_nw">NW</string>
     <string name="wind_s">S</string>
     <string name="wind_se">SE</string>
-    <string name="wind_speed_units">Wind speed units</string>
+    <string name="wind_speed_units">Rüzgar hızı birimleri</string>
     <string name="wind_speed_units_kmph">" km/h"</string>
     <string name="wind_speed_units_mph">" mph"</string>
     <string name="wind_speed_units_mps">" m/s"</string>
     <string name="wind_sse">S-SE</string>
     <string name="wind_ssw">S-SW</string>
     <string name="wind_sw">SW</string>
-    <string name="wind_variable">Variable</string>
+    <string name="wind_variable">Değişken</string>
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
     <string name="wind_wsw">W-SW</string>
-    <string name="zodiac_aries">Aries</string>
-    <string name="zodiac_taurus">Taurus</string>
-    <string name="zodiac_gemini">Gemini</string>
-    <string name="zodiac_cancer">Cancer</string>
-    <string name="zodiac_leo">Leo</string>
-    <string name="zodiac_virgo">Virgo</string>
-    <string name="zodiac_libra">Libra</string>
-    <string name="zodiac_scorpio">Scorpio</string>
-    <string name="zodiac_sagittarius">Sagittarius</string>
-    <string name="zodiac_capricorn">Capricorn</string>
-    <string name="zodiac_aquarius">Aquarius</string>
-    <string name="zodiac_pisces">Pisces</string>
+    <string name="zodiac_aries">Koç</string>
+    <string name="zodiac_taurus">Boğa</string>
+    <string name="zodiac_gemini">İkizler</string>
+    <string name="zodiac_cancer">Yengeç</string>
+    <string name="zodiac_leo">Aslan</string>
+    <string name="zodiac_virgo">Başak</string>
+    <string name="zodiac_libra">Terazi</string>
+    <string name="zodiac_scorpio">Akrep</string>
+    <string name="zodiac_sagittarius">Yay</string>
+    <string name="zodiac_capricorn">Oğlak</string>
+    <string name="zodiac_aquarius">Kova</string>
+    <string name="zodiac_pisces">Balık</string>
 </resources>
