--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -181,10 +181,13 @@
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_moon_phases_title">月亮變化</string>
     <string name="settings_notification_color_title">狀態欄的標誌顏色</string>
+    <string name="settings_notification_hourly_view_summary">顯示每小時的天氣在透視圖</string>
     <string name="settings_notification_summary">在通知區域中顯示當前天氣狀況</string>
     <string name="settings_notification_text_color_summary">通知欄文字和圖標的顏色</string>
     <string name="settings_notification_title">顯示通知</string>
     <string name="settings_notification_type">通知類型</string>
+    <string name="settings_notification_statusbar_summary">顯示通知在狀態欄</string>
+    <string name="settings_notification_statusbar_title">在狀態欄中通知</string>
     <string name="settings_show_info_summary">顯示或隱藏界面</string>
     <string name="settings_show_info_title">顯示信息</string>
     <string name="settings_time_format_12h">12小時時間格式</string>
